add new favicon, sadly not show up

--- a/frontend/vite-project/index.html
+++ b/frontend/vite-project/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/home/reka/Stableity/frontend/vite-project/icons/bedroom_baby_FILL0_wght400_GRAD0_opsz48.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Stableity</title>
   </head>
   <body>
     <div id="root"></div>
